@@ -1,0 +1,3 @@
+extern const char *const a[];
+extern const char *const a[];
+extern const char *const a[];
